--- a/earthterminal.ini
+++ b/earthterminal.ini
@@ -1,5 +1,7 @@
+
+
 [Main]
-Updated=2022-09-15
+Updated=2022-11-04
 LogFile=\earthterminal.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -4306,6 +4308,20 @@ SLInitHook.x64=1
 SLInitOffset.x64=2C29C
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.17763.3469]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=8A321
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=D099
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1FF75
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=2C06C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.18252.1000]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=780B1
@@ -5184,6 +5200,46 @@ SLInitHook.x64=1
 SLInitOffset.x64=2665C
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.19041.2075]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=C3229
+LocalOnlyCode.x86=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=3CC17
+SingleUserCode.x86=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=3E1E9
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+SLInitHook.x86=1
+SLInitOffset.x86=70BC8
+SLInitFunc.x86=New_CSLQuery_Initialize
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=932F1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=11DE2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1F2A5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=2877C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.19101.1112]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=941D1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=11902
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1EDC5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=2910C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.19613.1000]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=8FA01
@@ -5745,6 +5801,20 @@ SLInitHook.x64=1
 SLInitOffset.x64=23890
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.20348.1070]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=98A11
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=08982
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1BA65
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=25900
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.21277.1000]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=96FD1
@@ -6053,6 +6123,20 @@ DefPolicyOffset.x64=1BA15
 DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
 SLInitHook.x64=1
 SLInitOffset.x64=26C10
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.22000.1042]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=99651
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=18F22
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1BD85
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=277C0
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [10.0.22449.1000]
@@ -6503,6 +6587,34 @@ SLInitHook.x64=1
 SLInitOffset.x64=286D0
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.22621.608]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9B7E1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=186B2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1C135
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=286D0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.25110.1000]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9B541
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=186B2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1C135
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=286D0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.25115.1000]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=9B541
@@ -6753,6 +6865,90 @@ DefPolicyOffset.x64=18F05
 DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
 SLInitHook.x64=1
 SLInitOffset.x64=1C580
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.25206.1000]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9F3F1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=0F4C2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=18F05
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1C580
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.25211.1001]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9F3F1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=0F4C2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=18F05
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1C580
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.25217.1000]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9F2F1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=0F4B2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=18EF5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1C770
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.25227.1000]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9F2F1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=0F4B2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=18EF5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1C770
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.25231.1000]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9BBE1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=05802
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=170B5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1A740
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.25236.1000]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9BBE1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=05802
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=170B5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1A740
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [SLInit]
@@ -9277,6 +9473,16 @@ bMultimonAllowed.x64  =115D34
 ulMaxDebugSessions.x64=115D38
 bFUSEnabled.x64       =115D3C
 
+[10.0.17763.3469-SLInit]
+bInitialized.x64      =114D1C
+bServerSku.x64        =114D20
+lMaxUserSessions.x64  =114D24
+bAppServerAllowed.x64 =114D2C
+bRemoteConnAllowed.x64=114D30
+bMultimonAllowed.x64  =114D34
+ulMaxDebugSessions.x64=114D38
+bFUSEnabled.x64       =114D3C
+
 [10.0.18252.1000-SLInit]
 bInitialized.x64      =ECAB0
 bServerSku.x64        =ECAB4
@@ -9881,6 +10087,34 @@ bMultimonAllowed.x64  =1240A0
 ulMaxDebugSessions.x64=1240A4
 bFUSEnabled.x64       =1240A8
 
+[10.0.19041.2075-SLInit]
+bInitialized.x86      =E498C
+bServerSku.x86        =E4990
+lMaxUserSessions.x86  =E4994
+bAppServerAllowed.x86 =E499C
+bRemoteConnAllowed.x86=E49A4
+bMultimonAllowed.x86  =E49A8
+ulMaxDebugSessions.x86=E49AC
+bFUSEnabled.x86       =E49B0
+bInitialized.x64      =125084
+bServerSku.x64        =125088
+lMaxUserSessions.x64  =12508C
+bAppServerAllowed.x64 =125094
+bRemoteConnAllowed.x64=12509C
+bMultimonAllowed.x64  =1250A0
+ulMaxDebugSessions.x64=1250A4
+bFUSEnabled.x64       =1250A8
+
+[10.0.19101.1112-SLInit]
+bInitialized.x64      =127164
+bServerSku.x64        =127168
+lMaxUserSessions.x64  =12716C
+bAppServerAllowed.x64 =127174
+bRemoteConnAllowed.x64=12717C
+bMultimonAllowed.x64  =127180
+ulMaxDebugSessions.x64=127184
+bFUSEnabled.x64       =127188
+
 [10.0.19613.1000-SLInit]
 bInitialized.x64      =117040
 bServerSku.x64        =117044
@@ -10281,6 +10515,16 @@ bMultimonAllowed.x64  =11FEE8
 ulMaxDebugSessions.x64=11FEF0
 bFUSEnabled.x64       =11FEF4
 
+[10.0.20348.1070-SLInit]
+bInitialized.x64      =120ECC
+bServerSku.x64        =120ED0
+lMaxUserSessions.x64  =120ED4
+bAppServerAllowed.x64 =120EDC
+bRemoteConnAllowed.x64=120EE4
+bMultimonAllowed.x64  =120EE8
+ulMaxDebugSessions.x64=120EF0
+bFUSEnabled.x64       =120EF4
+
 [10.0.21277.1000-SLInit]
 bInitialized.x64      =11EE9C
 bServerSku.x64        =11EEA0
@@ -10500,6 +10744,16 @@ bRemoteConnAllowed.x64=11FEE4
 bMultimonAllowed.x64  =11FEE8
 ulMaxDebugSessions.x64=11FEF0
 bFUSEnabled.x64       =11FEF4
+
+[10.0.22000.1042-SLInit]
+bInitialized.x64      =120ECC
+bServerSku.x64        =120ED0
+lMaxUserSessions.x64  =120ED4
+bAppServerAllowed.x64 =120EDC
+bRemoteConnAllowed.x64=120EE4
+bMultimonAllowed.x64  =120EE8
+ulMaxDebugSessions.x64=120EF0
+bFUSEnabled.x64       =120EF4
 
 [10.0.22449.1000-SLInit]
 bInitialized.x64      =11FF0C
@@ -10821,6 +11075,26 @@ bMultimonAllowed.x64  =128F48
 ulMaxDebugSessions.x64=128F50
 bFUSEnabled.x64       =128F54
 
+[10.0.22621.608-SLInit]
+bInitialized.x64      =128F2C
+bServerSku.x64        =128F30
+lMaxUserSessions.x64  =128F34
+bAppServerAllowed.x64 =128F3C
+bRemoteConnAllowed.x64=128F44
+bMultimonAllowed.x64  =128F48
+ulMaxDebugSessions.x64=128F50
+bFUSEnabled.x64       =128F54
+
+[10.0.25110.1000-SLInit]
+bInitialized.x64      =128F2C
+bServerSku.x64        =128F30
+lMaxUserSessions.x64  =128F34
+bAppServerAllowed.x64 =128F3C
+bRemoteConnAllowed.x64=128F44
+bMultimonAllowed.x64  =128F48
+ulMaxDebugSessions.x64=128F50
+bFUSEnabled.x64       =128F54
+
 [10.0.25115.1000-SLInit]
 bInitialized.x64      =128F2C
 bServerSku.x64        =128F30
@@ -11000,3 +11274,63 @@ bRemoteConnAllowed.x64=12EF50
 bMultimonAllowed.x64  =12EF54
 ulMaxDebugSessions.x64=12EF5C
 bFUSEnabled.x64       =12EF60
+
+[10.0.25206.1000-SLInit]
+bInitialized.x64      =12EF38
+bServerSku.x64        =12EF3C
+lMaxUserSessions.x64  =12EF40
+bAppServerAllowed.x64 =12EF48
+bRemoteConnAllowed.x64=12EF50
+bMultimonAllowed.x64  =12EF54
+ulMaxDebugSessions.x64=12EF5C
+bFUSEnabled.x64       =12EF60
+
+[10.0.25211.1001-SLInit]
+bInitialized.x64      =12EF38
+bServerSku.x64        =12EF3C
+lMaxUserSessions.x64  =12EF40
+bAppServerAllowed.x64 =12EF48
+bRemoteConnAllowed.x64=12EF50
+bMultimonAllowed.x64  =12EF54
+ulMaxDebugSessions.x64=12EF5C
+bFUSEnabled.x64       =12EF60
+
+[10.0.25217.1000-SLInit]
+bInitialized.x64      =12EF48
+bServerSku.x64        =12EF4C
+lMaxUserSessions.x64  =12EF50
+bAppServerAllowed.x64 =12EF58
+bRemoteConnAllowed.x64=12EF60
+bMultimonAllowed.x64  =12EF64
+ulMaxDebugSessions.x64=12EF6C
+bFUSEnabled.x64       =12EF70
+
+[10.0.25227.1000-SLInit]
+bInitialized.x64      =12EF48
+bServerSku.x64        =12EF4C
+lMaxUserSessions.x64  =12EF50
+bAppServerAllowed.x64 =12EF58
+bRemoteConnAllowed.x64=12EF60
+bMultimonAllowed.x64  =12EF64
+ulMaxDebugSessions.x64=12EF6C
+bFUSEnabled.x64       =12EF70
+
+[10.0.25231.1000-SLInit]
+bInitialized.x64      =129F38
+bServerSku.x64        =129F3C
+lMaxUserSessions.x64  =129F40
+bAppServerAllowed.x64 =129F48
+bRemoteConnAllowed.x64=129F50
+bMultimonAllowed.x64  =129F54
+ulMaxDebugSessions.x64=129F5C
+bFUSEnabled.x64       =129F60
+
+[10.0.25236.1000-SLInit]
+bInitialized.x64      =129F38
+bServerSku.x64        =129F3C
+lMaxUserSessions.x64  =129F40
+bAppServerAllowed.x64 =129F48
+bRemoteConnAllowed.x64=129F50
+bMultimonAllowed.x64  =129F54
+ulMaxDebugSessions.x64=129F5C
+bFUSEnabled.x64       =129F60
