--- a/earthterminal.ini
+++ b/earthterminal.ini
@@ -1,7 +1,6 @@
 
-
 [Main]
-Updated=2022-11-04
+Updated=2023-01-19
 LogFile=\earthterminal.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -501,6 +500,14 @@ DefPolicyOffset.x64=17CFE
 DefPolicyCode.x64=CDefPolicy_Query_eax_rdi
 
 [6.1.7601.25757]
+SingleUserPatch.x86=1
+SingleUserOffset.x86=1A66D
+; We'll use a method by Stas'M
+SingleUserCode.x86=nop
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=19E5D
+; We'll use a method by Stas'M
+DefPolicyCode.x86=CDefPolicy_Query_eax_esi
 SingleUserPatch.x64=1
 SingleUserOffset.x64=17F86
 ; We'll use a method by Stas'M
@@ -2040,11 +2047,49 @@ SLInitOffset.x64=CA40
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [10.0.14393.5127]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=A5D08
+LocalOnlyCode.x86=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=3A1C5
+SingleUserCode.x86=nop
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=3C0D9
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+SLInitHook.x86=1
+SLInitOffset.x86=3F812
+SLInitFunc.x86=New_CSLQuery_Initialize
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=8CEF1
 LocalOnlyCode.x64=jmpshort
 SingleUserPatch.x64=1
 SingleUserOffset.x64=23CC8
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=29825
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=CA40
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.14393.5582]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=A5D98
+LocalOnlyCode.x86=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=3A1E5
+SingleUserCode.x86=nop
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=3C0F9
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+SLInitHook.x86=1
+SLInitOffset.x86=3F832
+SLInitFunc.x86=New_CSLQuery_Initialize
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=8CEC1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=25FA4
 SingleUserCode.x64=Zero
 DefPolicyPatch.x64=1
 DefPolicyOffset.x64=29825
@@ -4322,6 +4367,32 @@ SLInitHook.x64=1
 SLInitOffset.x64=2C06C
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.17763.3650]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=C12C4
+LocalOnlyCode.x86=jmpshort
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=8A321
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=3E7E7
+SingleUserCode.x86=Zero
+SingleUserPatch.x64=1
+SingleUserOffset.x64=D099
+SingleUserCode.x64=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=565B9
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1FF75
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x86=1
+SLInitOffset.x86=7167A
+SLInitFunc.x86=New_CSLQuery_Initialize
+SLInitHook.x64=1
+SLInitOffset.x64=2C06C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.18252.1000]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=780B1
@@ -5240,6 +5311,20 @@ SLInitHook.x64=1
 SLInitOffset.x64=2910C
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.19101.1120]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=932F1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=11DE2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1F2A5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=2877C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.19613.1000]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=8FA01
@@ -5802,6 +5887,20 @@ SLInitOffset.x64=23890
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [10.0.20348.1070]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=98A11
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=08982
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1BA65
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=25900
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.20348.1311]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=98A11
 LocalOnlyCode.x64=jmpshort
@@ -6951,6 +7050,104 @@ SLInitHook.x64=1
 SLInitOffset.x64=1A740
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.25246.1001]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9BC01
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=05802
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=170B5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1A740
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.25247.1000]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9BC01
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=05802
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=170B5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1A740
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.25252.1000]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9BC01
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=05802
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=170B5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1A740
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.25262.1000]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9BD31
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=0AA4B
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=170B5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1A740
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.25267.1000]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9BD81
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=06232
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=17025
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1A6B0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.25272.1000]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9BD81
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=06232
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=17025
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1A6B0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.25276.1000]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9BD81
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=06232
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=17025
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1A6B0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [SLInit]
 bServerSku=1
 bRemoteConnAllowed=1
@@ -7909,10 +8106,36 @@ ulMaxDebugSessions.x64=E747C
 bFUSEnabled.x64       =E7480
 
 [10.0.14393.5127-SLInit]
+bInitialized.x86      =C1F94
+bServerSku.x86        =C1F98
+lMaxUserSessions.x86  =C1F9C
+bAppServerAllowed.x86 =C1FA0
+bRemoteConnAllowed.x86=C1FA4
+bMultimonAllowed.x86  =C1FA8
+ulMaxDebugSessions.x86=C1FAC
+bFUSEnabled.x86       =C1FB0
 bInitialized.x64      =E7470
 bServerSku.x64        =E63D0
 lMaxUserSessions.x64  =E63D4
 bAppServerAllowed.x64 =E63D8
+bRemoteConnAllowed.x64=E7474
+bMultimonAllowed.x64  =E7478
+ulMaxDebugSessions.x64=E747C
+bFUSEnabled.x64       =E7480
+
+[10.0.14393.5582-SLInit]
+bInitialized.x86      =C1F94
+bServerSku.x86        =C1F98
+lMaxUserSessions.x86  =C1F9C
+bAppServerAllowed.x86 =C1FA0
+bRemoteConnAllowed.x86=C1FA4
+bMultimonAllowed.x86  =C1FA8
+ulMaxDebugSessions.x86=C1FAC
+bFUSEnabled.x86       =C1FB0
+bInitialized.x64      =E7470
+bServerSku.x64        =E7470
+lMaxUserSessions.x64  =E7470
+bAppServerAllowed.x64 =E7470
 bRemoteConnAllowed.x64=E7474
 bMultimonAllowed.x64  =E7478
 ulMaxDebugSessions.x64=E747C
@@ -9464,6 +9687,14 @@ ulMaxDebugSessions.x64=114D38
 bFUSEnabled.x64       =114D3C
 
 [10.0.17763.3232-SLInit]
+bInitialized.x86      =E5934
+bServerSku.x86        =E5938
+lMaxUserSessions.x86  =E593C
+bAppServerAllowed.x86 =E5944
+bRemoteConnAllowed.x86=E5948
+bMultimonAllowed.x86  =E594C
+ulMaxDebugSessions.x86=E5950
+bFUSEnabled.x86       =E5954
 bInitialized.x64      =115D1C
 bServerSku.x64        =115D20
 lMaxUserSessions.x64  =115D24
@@ -9474,6 +9705,16 @@ ulMaxDebugSessions.x64=115D38
 bFUSEnabled.x64       =115D3C
 
 [10.0.17763.3469-SLInit]
+bInitialized.x64      =114D1C
+bServerSku.x64        =114D20
+lMaxUserSessions.x64  =114D24
+bAppServerAllowed.x64 =114D2C
+bRemoteConnAllowed.x64=114D30
+bMultimonAllowed.x64  =114D34
+ulMaxDebugSessions.x64=114D38
+bFUSEnabled.x64       =114D3C
+
+[10.0.17763.3650-SLInit]
 bInitialized.x64      =114D1C
 bServerSku.x64        =114D20
 lMaxUserSessions.x64  =114D24
@@ -10115,6 +10356,16 @@ bMultimonAllowed.x64  =127180
 ulMaxDebugSessions.x64=127184
 bFUSEnabled.x64       =127188
 
+[10.0.19101.1120-SLInit]
+bInitialized.x64      =125084
+bServerSku.x64        =125088
+lMaxUserSessions.x64  =12508C
+bAppServerAllowed.x64 =125094
+bRemoteConnAllowed.x64=12509C
+bMultimonAllowed.x64  =1250A0
+ulMaxDebugSessions.x64=1250A4
+bFUSEnabled.x64       =1250A8
+
 [10.0.19613.1000-SLInit]
 bInitialized.x64      =117040
 bServerSku.x64        =117044
@@ -10516,6 +10767,16 @@ ulMaxDebugSessions.x64=11FEF0
 bFUSEnabled.x64       =11FEF4
 
 [10.0.20348.1070-SLInit]
+bInitialized.x64      =120ECC
+bServerSku.x64        =120ED0
+lMaxUserSessions.x64  =120ED4
+bAppServerAllowed.x64 =120EDC
+bRemoteConnAllowed.x64=120EE4
+bMultimonAllowed.x64  =120EE8
+ulMaxDebugSessions.x64=120EF0
+bFUSEnabled.x64       =120EF4
+
+[10.0.20348.1311-SLInit]
 bInitialized.x64      =120ECC
 bServerSku.x64        =120ED0
 lMaxUserSessions.x64  =120ED4
@@ -11326,6 +11587,76 @@ ulMaxDebugSessions.x64=129F5C
 bFUSEnabled.x64       =129F60
 
 [10.0.25236.1000-SLInit]
+bInitialized.x64      =129F38
+bServerSku.x64        =129F3C
+lMaxUserSessions.x64  =129F40
+bAppServerAllowed.x64 =129F48
+bRemoteConnAllowed.x64=129F50
+bMultimonAllowed.x64  =129F54
+ulMaxDebugSessions.x64=129F5C
+bFUSEnabled.x64       =129F60
+
+[10.0.25246.1001-SLInit]
+bInitialized.x64      =129F38
+bServerSku.x64        =129F3C
+lMaxUserSessions.x64  =129F40
+bAppServerAllowed.x64 =129F48
+bRemoteConnAllowed.x64=129F50
+bMultimonAllowed.x64  =129F54
+ulMaxDebugSessions.x64=129F5C
+bFUSEnabled.x64       =129F60
+
+[10.0.25247.1000-SLInit]
+bInitialized.x64      =129F38
+bServerSku.x64        =129F3C
+lMaxUserSessions.x64  =129F40
+bAppServerAllowed.x64 =129F48
+bRemoteConnAllowed.x64=129F50
+bMultimonAllowed.x64  =129F54
+ulMaxDebugSessions.x64=129F5C
+bFUSEnabled.x64       =129F60
+
+[10.0.25252.1000-SLInit]
+bInitialized.x64      =129F38
+bServerSku.x64        =129F3C
+lMaxUserSessions.x64  =129F40
+bAppServerAllowed.x64 =129F48
+bRemoteConnAllowed.x64=129F50
+bMultimonAllowed.x64  =129F54
+ulMaxDebugSessions.x64=129F5C
+bFUSEnabled.x64       =129F60
+
+[10.0.25262.1000-SLInit]
+bInitialized.x64      =129F38
+bServerSku.x64        =129F3C
+lMaxUserSessions.x64  =129F40
+bAppServerAllowed.x64 =129F48
+bRemoteConnAllowed.x64=129F50
+bMultimonAllowed.x64  =129F54
+ulMaxDebugSessions.x64=129F5C
+bFUSEnabled.x64       =129F60
+
+[10.0.25267.1000-SLInit]
+bInitialized.x64      =129F38
+bServerSku.x64        =129F3C
+lMaxUserSessions.x64  =129F40
+bAppServerAllowed.x64 =129F48
+bRemoteConnAllowed.x64=129F50
+bMultimonAllowed.x64  =129F54
+ulMaxDebugSessions.x64=129F5C
+bFUSEnabled.x64       =129F60
+
+[10.0.25272.1000-SLInit]
+bInitialized.x64      =129F38
+bServerSku.x64        =129F3C
+lMaxUserSessions.x64  =129F40
+bAppServerAllowed.x64 =129F48
+bRemoteConnAllowed.x64=129F50
+bMultimonAllowed.x64  =129F54
+ulMaxDebugSessions.x64=129F5C
+bFUSEnabled.x64       =129F60
+
+[10.0.25276.1000-SLInit]
 bInitialized.x64      =129F38
 bServerSku.x64        =129F3C
 lMaxUserSessions.x64  =129F40
