--- a/earthterminal.ini
+++ b/earthterminal.ini
@@ -1,6 +1,7 @@
 
+
 [Main]
-Updated=2023-01-19
+Updated=2023-02-23
 LogFile=\earthterminal.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -4648,6 +4649,18 @@ DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
 SLInitHook.x64=1
 SLInitOffset.x64=1BDFC
 SLInitFunc.x64=New_CSLQuery_Initialize
+SingleUserPatch.x86=1
+SingleUserOffset.x86=489FD
+SingleUserCode.x86=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=3D7D9
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=B46B9
+LocalOnlyCode.x86=jmpshort
+SLInitHook.x86=1
+SLInitOffset.x86=66658
+SLInitFunc.x86=New_CSLQuery_Initialize
 
 [10.0.19041.84]
 LocalOnlyPatch.x86=1
@@ -5245,6 +5258,20 @@ SLInitHook.x64=1
 SLInitOffset.x64=2910C
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.19041.1947]
+SingleUserPatch.x64=1
+SingleUserOffset.x64=EE53
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1EDC5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=922A1
+LocalOnlyCode.x64=jmpshort
+SLInitHook.x64=1
+SLInitOffset.x64=2665C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.19041.1949]
 LocalOnlyPatch.x86=1
 LocalOnlyOffset.x86=C2749
@@ -5284,6 +5311,34 @@ DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
 SLInitHook.x86=1
 SLInitOffset.x86=70BC8
 SLInitFunc.x86=New_CSLQuery_Initialize
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=932F1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=11DE2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1F2A5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=2877C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.19041.2670]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=932F1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=11DE2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1F2A5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=2877C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.19041.2673]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=932F1
 LocalOnlyCode.x64=jmpshort
@@ -5746,6 +5801,20 @@ SLInitHook.x64=1
 SLInitOffset.x64=22530
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.20348.1]
+SingleUserPatch.x64=1
+SingleUserOffset.x64=1557F
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1B7A5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=97231
+LocalOnlyCode.x64=jmpshort
+SLInitHook.x64=1
+SLInitOffset.x64=22600
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.20348.143]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=97231
@@ -5901,6 +5970,20 @@ SLInitOffset.x64=25900
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [10.0.20348.1311]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=98A11
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=08982
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1BA65
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=25900
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.20348.1547]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=98A11
 LocalOnlyCode.x64=jmpshort
@@ -6225,6 +6308,20 @@ SLInitOffset.x64=26C10
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [10.0.22000.1042]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=99651
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=18F22
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1BD85
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=277C0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.22000.1641]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=99651
 LocalOnlyCode.x64=jmpshort
@@ -7135,6 +7232,76 @@ SLInitOffset.x64=1A6B0
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [10.0.25276.1000]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9BD81
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=06232
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=17025
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1A6B0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.25281.1000]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9BD81
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=06232
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=17025
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1A6B0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.25284.1000]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9BD81
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=06232
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=17025
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1A6B0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.25290.1000]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9BD81
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=06232
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=17025
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1A6B0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.25295.1000]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9BD81
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=06232
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=17025
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1A6B0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.25300.1000]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=9BD81
 LocalOnlyCode.x64=jmpshort
@@ -9901,6 +10068,14 @@ bRemoteConnAllowed.x64=104010
 bMultimonAllowed.x64  =104014
 ulMaxDebugSessions.x64=104018
 bFUSEnabled.x64       =10401C
+bServerSku.x86        =CF924
+bRemoteConnAllowed.x86=CF938
+bFUSEnabled.x86       =CF944
+bAppServerAllowed.x86 =CF930
+bMultimonAllowed.x86  =CF93C
+lMaxUserSessions.x86  =CF928
+ulMaxDebugSessions.x86=CF940
+bInitialized.x86      =CF920
 
 [10.0.19041.84-SLInit]
 bInitialized.x86      =CF920
@@ -10310,6 +10485,16 @@ bMultimonAllowed.x64  =127180
 ulMaxDebugSessions.x64=127184
 bFUSEnabled.x64       =127188
 
+[10.0.19041.1947-SLInit]
+bInitialized.x64      =124084
+bServerSku.x64        =124088
+lMaxUserSessions.x64  =12408C
+bAppServerAllowed.x64 =124094
+bRemoteConnAllowed.x64=12409C
+bMultimonAllowed.x64  =1240A0
+ulMaxDebugSessions.x64=1240A4
+bFUSEnabled.x64       =1240A8
+
 [10.0.19041.1949-SLInit]
 bInitialized.x86      =E398C
 bServerSku.x86        =E3990
@@ -10337,6 +10522,26 @@ bRemoteConnAllowed.x86=E49A4
 bMultimonAllowed.x86  =E49A8
 ulMaxDebugSessions.x86=E49AC
 bFUSEnabled.x86       =E49B0
+bInitialized.x64      =125084
+bServerSku.x64        =125088
+lMaxUserSessions.x64  =12508C
+bAppServerAllowed.x64 =125094
+bRemoteConnAllowed.x64=12509C
+bMultimonAllowed.x64  =1250A0
+ulMaxDebugSessions.x64=1250A4
+bFUSEnabled.x64       =1250A8
+
+[10.0.19041.2670-SLInit]
+bInitialized.x64      =125084
+bServerSku.x64        =125088
+lMaxUserSessions.x64  =12508C
+bAppServerAllowed.x64 =125094
+bRemoteConnAllowed.x64=12509C
+bMultimonAllowed.x64  =1250A0
+ulMaxDebugSessions.x64=1250A4
+bFUSEnabled.x64       =1250A8
+
+[10.0.19041.2673-SLInit]
 bInitialized.x64      =125084
 bServerSku.x64        =125088
 lMaxUserSessions.x64  =12508C
@@ -10666,6 +10871,16 @@ bMultimonAllowed.x64  =11EEB8
 ulMaxDebugSessions.x64=11EEC0
 bFUSEnabled.x64       =11EEC4
 
+[10.0.20348.1-SLInit]
+bServerSku.x64        =11EEB0
+bRemoteConnAllowed.x64=11EEC4
+bFUSEnabled.x64       =11EED4
+bAppServerAllowed.x64 =11EEBC
+bMultimonAllowed.x64  =11EEC8
+lMaxUserSessions.x64  =11EEB4
+ulMaxDebugSessions.x64=11EED0
+bInitialized.x64      =11EEAC
+
 [10.0.20348.143-SLInit]
 bInitialized.x64      =11EEAC
 bServerSku.x64        =11EEB0
@@ -10777,6 +10992,16 @@ ulMaxDebugSessions.x64=120EF0
 bFUSEnabled.x64       =120EF4
 
 [10.0.20348.1311-SLInit]
+bInitialized.x64      =120ECC
+bServerSku.x64        =120ED0
+lMaxUserSessions.x64  =120ED4
+bAppServerAllowed.x64 =120EDC
+bRemoteConnAllowed.x64=120EE4
+bMultimonAllowed.x64  =120EE8
+ulMaxDebugSessions.x64=120EF0
+bFUSEnabled.x64       =120EF4
+
+[10.0.20348.1547-SLInit]
 bInitialized.x64      =120ECC
 bServerSku.x64        =120ED0
 lMaxUserSessions.x64  =120ED4
@@ -11007,6 +11232,16 @@ ulMaxDebugSessions.x64=11FEF0
 bFUSEnabled.x64       =11FEF4
 
 [10.0.22000.1042-SLInit]
+bInitialized.x64      =120ECC
+bServerSku.x64        =120ED0
+lMaxUserSessions.x64  =120ED4
+bAppServerAllowed.x64 =120EDC
+bRemoteConnAllowed.x64=120EE4
+bMultimonAllowed.x64  =120EE8
+ulMaxDebugSessions.x64=120EF0
+bFUSEnabled.x64       =120EF4
+
+[10.0.22000.1641-SLInit]
 bInitialized.x64      =120ECC
 bServerSku.x64        =120ED0
 lMaxUserSessions.x64  =120ED4
@@ -11657,6 +11892,56 @@ ulMaxDebugSessions.x64=129F5C
 bFUSEnabled.x64       =129F60
 
 [10.0.25276.1000-SLInit]
+bInitialized.x64      =129F38
+bServerSku.x64        =129F3C
+lMaxUserSessions.x64  =129F40
+bAppServerAllowed.x64 =129F48
+bRemoteConnAllowed.x64=129F50
+bMultimonAllowed.x64  =129F54
+ulMaxDebugSessions.x64=129F5C
+bFUSEnabled.x64       =129F60
+
+[10.0.25281.1000-SLInit]
+bInitialized.x64      =129F38
+bServerSku.x64        =129F3C
+lMaxUserSessions.x64  =129F40
+bAppServerAllowed.x64 =129F48
+bRemoteConnAllowed.x64=129F50
+bMultimonAllowed.x64  =129F54
+ulMaxDebugSessions.x64=129F5C
+bFUSEnabled.x64       =129F60
+
+[10.0.25284.1000-SLInit]
+bInitialized.x64      =129F38
+bServerSku.x64        =129F3C
+lMaxUserSessions.x64  =129F40
+bAppServerAllowed.x64 =129F48
+bRemoteConnAllowed.x64=129F50
+bMultimonAllowed.x64  =129F54
+ulMaxDebugSessions.x64=129F5C
+bFUSEnabled.x64       =129F60
+
+[10.0.25290.1000-SLInit]
+bInitialized.x64      =129F38
+bServerSku.x64        =129F3C
+lMaxUserSessions.x64  =129F40
+bAppServerAllowed.x64 =129F48
+bRemoteConnAllowed.x64=129F50
+bMultimonAllowed.x64  =129F54
+ulMaxDebugSessions.x64=129F5C
+bFUSEnabled.x64       =129F60
+
+[10.0.25295.1000-SLInit]
+bInitialized.x64      =129F38
+bServerSku.x64        =129F3C
+lMaxUserSessions.x64  =129F40
+bAppServerAllowed.x64 =129F48
+bRemoteConnAllowed.x64=129F50
+bMultimonAllowed.x64  =129F54
+ulMaxDebugSessions.x64=129F5C
+bFUSEnabled.x64       =129F60
+
+[10.0.25300.1000-SLInit]
 bInitialized.x64      =129F38
 bServerSku.x64        =129F3C
 lMaxUserSessions.x64  =129F40
